@@ -22,17 +22,28 @@ defaults.bluealsa.delay 0
 defaults.bluealsa.service "org.bluealsa"
 # Default for mixer is to show all PCMs
 defaults.bluealsa.ctl.device "FF:FF:FF:FF:FF:FF"
+# By default do not show additional controls. It is advised to
+# read the documentation for "bluealsa" control plugin before
+# enabling this option.
+defaults.bluealsa.ctl.extended "no"
 defaults.bluealsa.ctl.battery "no"
 defaults.bluealsa.ctl.bttransport "no"
 defaults.bluealsa.ctl.dynamic "yes"
 
 ctl.bluealsa {
-	@args [ DEV BAT BTT DYN SRV ]
+	@args [ DEV EXT BAT BTT DYN SRV ]
 	@args.DEV {
 		type string
 		default {
 			@func refer
 			name defaults.bluealsa.ctl.device
+		}
+	}
+	@args.EXT {
+		type string
+		default {
+			@func refer
+			name defaults.bluealsa.ctl.extended
 		}
 	}
 	@args.BAT {
@@ -65,6 +76,7 @@ ctl.bluealsa {
 	}
 	type bluealsa
 	device $DEV
+	extended $EXT
 	battery $BAT
 	bttransport $BTT
 	dynamic $DYN
