@@ -2,6 +2,7 @@ unreleased
 ==========
 
 Optional non-dynamic operation mode for ALSA control plug-in
+Optional extended controls for ALSA control plug-in
 
 bluez-alsa v4.0.0 (2022-06-03)
 ==============================
